# pitty-putty

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  pre-push  run.sh  vcpkg.json
assets/maps/: testmap.tmx
hooks/: pre-commit
src/: Bullet.cpp  Bullet.h  BulletManager.cpp  BulletManager.h  DialogBox.cpp  DialogBox.h  Game.cpp  Game.h  GameApplication.cpp  GameApplication.h  GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlanetGraphics.h  Player.cpp  Player.h  RigidBodyType.h  SettingsState.cpp  SettingsState.h  StarBackground.cpp  StarBackground.h  main.cpp
src/client/: Bullet.cpp  BulletManager.h  DialogBox.cpp  GameState.cpp  MenuState.h  PauseState.h  Player.cpp  SettingsState.cpp  SettingsState.h  StarBackground.cpp  StarBackground.h  main.cpp
src/server/: main.cpp
